# luxafor-rs-gui

./: .gitignore  Cargo.toml  README.md  build.rs
assets/icons/: icon.icns
src/: app.rs  main.rs
src/app/: mod.rs  mode.rs
src/luxafor/: hid.rs  mod.rs
src/ui/: main_window.rs  mod.rs  styles.rs
