[package]
name = "luxafor-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"]}
hidapi = "2.6.5"
tokio = "1.52.3"

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.packager]
name = "Luxafor Control App"
identifier = "com.overfl0w.luxafor-rs-gui"
version = "0.1.0"
description = "A cross-platform GUI controller for the Luxafor USB busy flag"
formats = ["deb", "wix", "dmg"]
icons = [
    "assets/icons/icon_32.png",
    "assets/icons/icon_128.png",
    "assets/icons/icon_256.png",
    "assets/icons/icon_512.png",
    "assets/icon.ico",
    "assets/icon.icns",
]